# programmers-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test-on-push.yml
solutions/level_1/athletes_who_did_not_finish/: README.md  __init__.py  test_solution.py
solutions/level_1/babbling_2/: README.md  __init__.py  test_solution.py
solutions/level_1/coke_problem/: README.md  __init__.py  test_solution.py
solutions/level_1/correct_parenthesis/: README.md  __init__.py  test_solution.py
solutions/level_1/food_fight_contest/: README.md  __init__.py  test_solution.py
solutions/level_1/fruiterer/: README.md  __init__.py  test_solution.py
solutions/level_1/gym_suit/: README.md  __init__.py  test_solution.py
solutions/level_1/hall_of_fame_1/: README.md  __init__.py  test_solution.py
solutions/level_1/hate_the_same_number/: README.md  __init__.py  test_solution.py
solutions/level_1/kth_number/: README.md  __init__.py  test_solution.py
solutions/level_1/least_rectangle/: README.md  __init__.py  test_solution.py
solutions/level_1/making_hamburgers/: README.md  __init__.py  test_solution.py
solutions/level_1/number_mate/: README.md  __init__.py  test_solution.py
solutions/level_1/number_of_factors_and_addition/: README.md  __init__.py  test_solution.py
solutions/level_1/pick_two_and_add_them/: README.md  __init__.py  test_solution.py
solutions/level_1/pocketmon/: README.md  __init__.py  test_solution.py
solutions/level_1/press_the_keypad/: README.md  __init__.py  test_solution.py
solutions/level_1/string_of_numbers_and_words/: README.md  __init__.py  test_solution.py
solutions/level_1/templars_weapon/: README.md  __init__.py  test_solution.py
solutions/level_1/test_personality_type/: README.md  __init__.py  test_solution.py
solutions/level_1/the_highest_and_lowest_ranks_of_the_lottery/: README.md  __init__.py  test_solution.py
solutions/level_1/the_three_musketeers/: README.md  __init__.py  test_solution.py
solutions/level_2/camouflage/: README.md  __init__.py  test_solution.py
solutions/level_2/cut_roll_cake/: README.md  __init__.py  test_solution.py
solutions/level_2/discount_event/: README.md  __init__.py  test_solution.py
solutions/level_2/list_of_phone_numbers/: README.md  __init__.py  test_solution.py
solutions/level_2/picking_tangerines/: README.md  __init__.py  test_solution.py
solutions/level_2/split_string/: README.md  __init__.py  test_solution.py
solutions/level_3/a_binary_tree_that_can_be_represented/: README.md  __init__.py  test_solution.py
(+9 files in other folders)
