[tool.poetry]
authors = ["Flynn <wphestiraid@gmail.com>"]
description = "프로그래문제 풀이"
name = "programmers-py"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "==23.7.0"
pre-commit = "^3.4.0"
pyright = "^1.1.325"
pytest = "^7.4.1"
ruff = "==0.0.287"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
include = '\.pyi?$'
line-length = 120
skip-string-normalization = true
target-version = ['py310']
