[tool.poetry]
authors = ["Flynn <wphestiraid@gmail.com>"]
description = "프로그래문제 풀이"
name = "programmers-py"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "==23.7.0"
pre-commit = "^3.4.0"
pyright = "^1.1.325"
pytest = "^7.4.1"
ruff = "==0.0.287"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
include = '\.pyi?$'
line-length = 120
skip-string-normalization = true
target-version = ['py311']
preview = true

[tool.pyright]
venvPath = "."
venv = ".venv"
reportGeneralTypeIssues = false

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "PL", # pylint
]
ignore = [
    "E501",    # line too long, handled by black
    "E711",    # Comparison to None should be cond is None
    "E712",    # Comparison to True should be cond is True or if cond:
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments to function call
]
line-length = 120
target-version = "py311"
